Changes to be committed: 	modified:   board/makeimg.bat 	fixed can not create *.fls file in ./board/bin
	modified:   board/project.uvoptx
	modified:   board/project.uvprojx
	fixed error: has assert failed at ef_port_init

--- a/board/project.uvprojx
+++ b/board/project.uvprojx
@@ -630,7 +630,7 @@
             <File>
               <FileName>ef_fal_port.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\packages\EasyFlash-v3.3.0\ports\ef_fal_port.c</FilePath>
+              <FilePath>.\ports\easyflash\ef_fal_port.c</FilePath>
             </File>
           </Files>
         </Group>
