--- a/board/Kconfig
+++ b/board/Kconfig
@@ -8,7 +8,7 @@ config $BSP_DIR
 config $RTT_DIR
     string
     option env="RTT_ROOT"
-    default "../../rt-thread"
+    default "../rt-thread"
     
 # you can change the RTT_ROOT default "../.." to your rtthread_root,
 # example : default "F:/git_repositories/rt-thread"
@@ -25,5 +25,5 @@ config $ENV_DIR
 
 source "$RTT_DIR/Kconfig"
 source "$PKGS_DIR/Kconfig"
-source "$BSP_DIR/../../drivers/Kconfig"
-source "$BSP_DIR/../../libraries/Kconfig"
+source "$BSP_DIR/../drivers/Kconfig"
+source "$BSP_DIR/../libraries/Kconfig"
